# infusers

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  TECH_DEBT.md  pyproject.toml
.githooks/: pre-push
apps/flux_klein_t2i/: app.py
apps/klein_9b/: app.py
docs/: modal.md
infusers/: __init__.py  klein.py
infusers/configs/models/flux/: klein9b.yaml  klein9bkv.yaml
infusers/configs/quant/: image_basic_dummy.yaml
infusers/configs/quant/flux/klein9b/: image_basic.yaml  image_basic_offload.yaml  pano_basic.yaml
infusers/configs/quant/flux/klein9bkv/: image_basic.yaml  image_basic_offload.yaml
infusers/modal_app/: __init__.py  base.py  dummy_image.py  log_util.py  lunas_courageous_adventure.py  stream.py
infusers/modal_app/translators/: __init__.py  atomic.py  combinators.py  context.py  dsl.py  registry.py
infusers/model/: __init__.py  klein.py  weights.py
infusers/quant/api/: base.py  image_base.py  pano_base.py
infusers/quant/flux/: image.py  panorama.py  vnsdedit.py
infusers/scripts/: inference_image.py  inference_pano.py
notes/: 2026-06-08-kickoff.md  20260628-generator-quant-streaming.md  20260628-generic-modal-runner.md  20260628-gpu-hosting-experiment.md  20260628-modal-setup.md  20260701-vnsdedit-signal-rgba.md  README.md
scripts/: modal_env.sh  pano_ablation_modal.py  smoke.sh  smoke_stream.sh  stage_weights.sh  upload_weights.sh  vanilla_inference_klein.py  vnsdedit_e2e.py
tests/: test_model_cache.py  test_reqm_configs.py  test_weights_and_tensors.py
tests/modal_app/: __init__.py  test_dsl.py  test_log_util.py  test_modal_e2e.py  test_runner.py  test_stream.py  test_translators.py
tests/quant/: test_generator.py  test_panorama_gpu.py  test_panorama_math.py  test_vnsdedit.py
