[project]
name = "infusers"
version = "0.1.0"
description = "Custom ML inference — inferencer logic and Modal deployments for jkvc"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flux",
    "click>=8",
    "pillow>=10",
    "reqm>=0.1.1",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "modal>=0.73",
    "pytest>=8",
    "ruff>=0.9",
]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.sources]
flux = { git = "https://github.com/black-forest-labs/flux2.git" }
torch = { index = "pytorch-cu129" }
torchvision = { index = "pytorch-cu129" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["infusers"]

[tool.hatch.build.targets.wheel.force-include]
"infusers/configs" = "infusers/configs"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
